--- a/Html-Form.html
+++ b/Html-Form.html
@@ -73,9 +73,9 @@
             <input type="checkbox"> ยินยอมให้เก็บข้อมูล <br>
         </div>
 
-        <div>
-            <input type="reset" value="Reset" >
-            <input type="submit" value="submit">
+        <div >
+            <input type="reset" class="purple" value="Reset" >
+            <input type="submit" value="Submit">
         </div>
     </form>
 </body>
