--- a/Html-Form.html
+++ b/Html-Form.html
@@ -45,34 +45,34 @@
     <form>
         <div class="form-row">
             <label for="firstName" class="col-sm-3 col-form-label">ชื่อ</label>
-            <input type="text" class="form-control custom-input" id="name" name="firstName"><br>
+            <input type="text" class="form-control custom-input" id="name" name="firstName" required>
     
         </div>
 
         <div class="form-row">
             <label for="LastName" class="col-sm-3 col-form-label">สกุล</label>
-            <input type="text" class="form-control custom-input"><br>
+            <input type="text" class="form-control custom-input" required>
         </div>
 
         <div class="form-row">
             <label for="date" class="col-sm-3 col-form-label">วัน/เดือน/ปีเกิด</label>
-            <input type="date" class="form-control custom-input"><br>
+            <input type="date" class="form-control custom-input" required>
         </div>
 
         <div class="form-row">
             <label for="Age" class="col-sm-3 col-form-label">อายุ</label>
-            <input type="number" class="form-control custom-input"><br>
+            <input type="number" class="form-control custom-input" required>
         </div>
         <div class="form-row">
             <label for="gender" class="col-sm-3 col-form-label ">เพศ</label>
            <div class="radio-group">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="gender" id="male" value="Male">
+                <input class="form-check-input" type="radio" name="gender" id="male" value="Male" required>
                 <label class="form-check-label" for="male">ชาย</label>
             </div>
             
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="gender" id="female" value="Female">
+                <input class="form-check-input" type="radio" name="gender" id="female" value="Female" required>
                 <label class="form-check-label" for="female">หญิง</label>
             </div>
            </div>
@@ -80,17 +80,17 @@
 
         <div class="form-row">
             <label for="Pic"class="col-sm-3 col-form-label">รูป</label>
-            <input type="file"  class="custom-input "><br>
+            <input type="file"  class="custom-input " >
         </div>
 
         <div class="form-row">
             <label for="Address" class="move-up col-sm-3 col-form-label "  >ที่อยู่</label>
-            <textarea rows="4" cols="20" class="form-control custom-input"></textarea><br>
+            <textarea rows="4" cols="20" class="form-control custom-input"></textarea>
         </div>
 
         <div class="form-row">
             <label for="FavColor" class="col-sm-3 col-form-label">สีที่ชอบ</label>
-            <select id="color" class="form-select custom-input">
+            <select id="color" class="form-select custom-input" required>
                 <option value="red" >สีแดง</option>
                 <option value="blue">สีน้ำเงิน</option>
                 <option value="Yellow">สีเหลือง</option>
@@ -113,7 +113,7 @@
         </div>
 
         <div class="form-check ">
-            <input class="form-check-input" class="form-label" type="checkbox"> ยินยอมให้เก็บข้อมูล <br>
+            <input class="form-check-input" class="form-label" type="checkbox" required> ยินยอมให้เก็บข้อมูล 
         </div>
 
         <div class="form-group d-flex justify-content-between mt-3" >
